--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,14 +19,14 @@ jobs:
           terraform_version: 1.4.0
 
       - name: Terraform Init
-        working-directory: terraform/
+        working-directory: /terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: terraform init
 
       - name: Terraform Apply
-        working-directory: terraform/
+        working-directory: /terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
